--- a/styles.css
+++ b/styles.css
@@ -68,10 +68,34 @@ section{
             height: 4.25em;
             width: auto;
         }
-        p{
-            
-        }
+
     }
+}
+.impact{
+    padding: 0.625em;
+
+    .iimg{
+        width: 100%;
+        height: 15.8em;
+    }
+
+        
+    .partner{
+            border: none;
+            border-radius: 1.563em;
+            width: 100%;
+            height: 2.5em;
+            margin-top: 1.563em;
+            background-color: rgb(128, 187, 132);
+            cursor: pointer;
+            
+            a{
+                text-decoration: none;
+                color: black;
+                cursor: pointer;
+            }
+        }
+   
 }
 .video-section{
     border: none;
