--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,12 @@
         margin-top: 1.563em;
         background-color: rgb(128, 187, 132);
         cursor: pointer;
+
+        a{
+            text-decoration: none;
+            color: black;
+            cursor: pointer;
+        }
     }
 }
 
@@ -95,11 +101,27 @@ section{
                 cursor: pointer;
             }
         }
-   
 }
-.video-section{
-    border: none;
-    margin-top: 1.825em;
-    display: flex;
-    justify-content: center;
+.brands{
+    
+
+    .brand{
+        width: 10%;
+    }
 }
+.stories{
+
+    h3{
+        margin-top: 1.0em;
+        text-align: center;
+        
+    }
+
+    .video-section{
+        border: none;
+        margin-top: 1.825em;
+        display: flex;
+        justify-content: center;
+    }
+}
+
