--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@
 }
 
 
-@media only screen and (max-width: 1023px)and (min-width: 768px) {
+@media only screen and (max-device-width: 1023px)and (min-width: 768px) {
     
     .navigation{
         display: flex;
