--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@
 @media only screen and (device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) { 
     .navigation{
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         padding: 0.725em;
         
