--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 0.700em;
+        gap: 0.900em;
 
         li{
             display: flex;
@@ -119,7 +119,8 @@
         }
     }
     .logo{
-        width: 80%;
+        width: 100%;
+        height: auto;
         background-repeat: no-repeat;
         height: 8.25em;
         padding-top: 0.825em;
