--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@
     }
     .logo{
         width: 100%;
-        height: 100%;
+        height: 1.8em;
         background-repeat: no-repeat;
         height: 8.25em;
         padding-top: 0.825em;
