--- a/styles.css
+++ b/styles.css
@@ -117,10 +117,13 @@
             list-style: georgian;
             font-size: 1.125em;
         }
+        li::before {
+            content: ' ★ '
+          }
     }
     .logo{
         width: 100%;
-        height: 2.398em;
+        height: 2.998em;
         background-repeat: no-repeat;
         height: 8.25em;
         padding-top: 0.825em;
