--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 
     .logo{
         width: 100%;
-        height: auto;
+        height: 100%;
         background-size: 100%;
         background-repeat: no-repeat;
         height: 8.25em;
