--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     line-height: 2.625em;
 
     .logo{
-        width: 100%;
+        width: auto;
         height: 100%;
         background-repeat: no-repeat;
         height: 8.25em;
