--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,12 @@
     margin: auto;
     line-height: 2.625em;
 
+
+    .logo {
+        min-width: 100px;
+        max-width: 190px;
+        height: 40px;
+      }
     .logo{
         width: auto;
         height: 100%;
@@ -132,6 +138,11 @@
             content: ' ★ '
           }
     }
+    .logo {
+        min-width: 100px;
+        max-width: 190px;
+        height: 40px;
+      }
     .logo{
         width: 100%;
         height: 45px;
